...
        button.setTitleColor(UIColor.yellow, for: UIControlState());
        button.alpha=0.2;
        button.layer.borderWidth=0.3;
        button.layer.cornerRadius=2;
        button.addTarget(self, action: #selector(secondViewController.pressme), for: .touchUpInside);
        button.titleLabel!.textAlignment=NSTextAlignment.center;
        button.accessibilityIdentifier = "button456"
        self.view.addSubview(button);
        
        
        //************ date picker programmatically***********//
        
        let datepick=UIDatePicker(frame:CGRect(x: 20, y: 80, width: 280, height: 100));
        datepick.datePickerMode = UIDatePickerMode.date;
        datepick.accessibilityIdentifier = "datepick123"
        self.view.addSubview(datepick);
        
        //************ web view programmatically **************//
        
        let webview=UIWebView(frame:CGRect(x: 20, y: 240, width: 280, height: 310));
        let url = URL(string: "http://www.rkiosdev.blogspot.in");
...
